<resources>
    <string name="app_name">Volleyball Passing</string>
    <string name="instruct">Choose the pass value to add to the total.</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="passing_stats">Average (0): 0\nZeros: 0\nOnes: 0\nTwos: 0\nThrees: 0</string>
    <string name="button_reset">Reset</string>
</resources>
