<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="codyjking.com.vballpassingstats.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:onClick="addZero"
        android:text="@string/button_zero"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:onClick="addTwo"
        android:text="@string/button_two"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="49dp"
        android:onClick="addOne"
        android:text="@string/button_one"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:onClick="addThree"
        android:text="@string/button_three"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/button_reset"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/instruct"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="387dp"
        android:layout_height="165dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/passing_stats"
        android:textAlignment="viewStart"
        android:layout_gravity="start"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>

